tests/baselines/reference/unusedTypeParameterInInterface1.errors.txt
unusedTypeParameterInInterface1.ts(1,14): error TS6133: 'T' is declared but its value is never read.


==== unusedTypeParameterInInterface1.ts (1 errors) ====
    interface int<T> {
                 ~~~
!!! error TS6133: 'T' is declared but its value is never read.
    
    }